--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,76 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Belgian and Arab</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: On the Road to Opar</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Call of the Jungle</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Prophecy and Fulfilment</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Altar of the Flaming God</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Arab Raid</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Jewel-Room of Opar</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Escape from Opar</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Theft of the Jewels</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Achmet Zek Sees the Jewels</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Tarzan Becomes a Beast Again</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: La Seeks Vengeance</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Condemned to Torture and Death</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: A Priestess but yet a Woman</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Flight of Werper</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Tarzan Again Leads the Mangani</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Deadly Peril of Jane Clayton</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Fight for the Treasure</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Jane Clayton and the Beasts of the Jungle</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Jane Clayton Again a Prisoner</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Flight to the Jungle</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Tarzan Recovers His Reason</a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: A Night of Terror</a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Home</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +97,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Tarzan and the Jewels of Opar</a>
 				</li>
 			</ol>
 		</nav>
